Fix: Horizontal alignment of menu items (#1663)
* fix menu item alignment

* fix settings icon oval shape on hover

--- a/src/components/MenuBars/MenuItem/MenuItem.scss
+++ b/src/components/MenuBars/MenuItem/MenuItem.scss
@@ -63,8 +63,10 @@ $number-of-menu-items: 4;
 
 .menu-item__icon {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 36px;
   height: 36px;
   border-radius: 100%;
   color: var(--primaryColor);
